--- a/_posts/0000-01-02-jshwong.md
+++ b/_posts/0000-01-02-jshwong.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to jshwong's slide!"
 ---
 This is jshwong's slide.
 Use the left arrow to go back!
