--- a/_posts/0000-01-02-jshwong.md
+++ b/_posts/0000-01-02-jshwong.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to jshwong's slide!"
 ---
-This is jshwong's slide.
+This is my awesome slide.
 Use the left arrow to go back!
